--- a/3ch-web/package.json
+++ b/3ch-web/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.3.7",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.3",
+    "canvas-confetti": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-qr-code": "^2.0.18",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
