--- a/3ch-web/package.json
+++ b/3ch-web/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.2.0",
     "react-qr-code": "^2.0.18",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
